--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
       <div class="image">
         <img
           src="img/1.jpg"
-          alt="sex"
+          alt="test"
           onclick="openModal('img/1.jpg', 'Web Design')"
         />
       </div>
       <div class="image">
         <img
           src="img/2.jpg"
-          alt="sex2"
+          alt="test2"
           onclick="openModal('img/2.jpg', 'Python')"
         />
       </div>
       <div class="image">
         <img
           src="img/3.jpg"
-          alt="sex3"
+          alt="test3"
           onclick="openModal('img/3.jpg', 'UI UX')"
         />
       </div>
@@ -39,14 +39,14 @@
       <div class="image">
         <img
           src="img/1.jpg"
-          alt="asfdasd"
+          alt="test4"
           onclick="openModal('img/1.jpg', 'Web Design')"
         />
       </div>
       <div class="image">
         <img
           src="img/2.jpg"
-          alt="sadasd"
+          alt="test5"
           onclick="openModal('img/2.jpg', 'django')"
         />
       </div>
